# file-manager

./: .gitignore  README.md  pyproject.toml  scripts.py
.github/workflows/: main.yml
file_manager/: app.py  controller.py  model.py  publisher.py  view.py  widgets.py
tests/: app_test.py  controller_test.py  model_test.py  publisher_test.py  view_test.py  widgets_test.py
